--- a/qa-ui/pom.xml
+++ b/qa-ui/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>qa-ui</artifactId>
 
     <properties>
-        <aspectj.version>1.8.10</aspectj.version>
         <aspectj.version>1.8.3</aspectj.version>
     </properties>
 
@@ -37,7 +36,7 @@
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                     </argLine>
                     <systemPropertyVariables>
-                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                        <allure.results.directory>/Users/igor/Desktop/qa-fraimework/qa-ui/target/allure-results</allure.results.directory>
                         <application.environment>${application.environment}</application.environment>
                     </systemPropertyVariables>
                 </configuration>
@@ -113,6 +112,13 @@
             <artifactId>allure-java-commons</artifactId>
             <version>2.13.1</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.13.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
