--- a/qa-ui/pom.xml
+++ b/qa-ui/pom.xml
@@ -92,7 +92,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.0.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <!--  slf4j-log4j12  -->
         <dependency>
